# OpenCV_CPP

./: CMakeLists.txt  detect_aruco.cpp  detect_aruco_video.cpp  generate_aruco.cpp  main.cpp
